@@ -1,10 +1,12 @@
 DIST libcec-1.6.2.tar.gz 929364 SHA256 2d853df4478a9b93ef699c7038cf78a97741b1a594996d1df644f2d5e51d6969 SHA512 6b42c6810ebc6819e1cf1c806a25d8ca5ccc6786d4026a595e7b86336f7cb087d80e9daf464f3bbccb2fa3d009f551fdcb616d5b5ddea2d8db42b28499786dcd WHIRLPOOL 2d78ab7885a04975b7c283041a33747a09b7444bedba27f2cd3057558f255ce3a8c60766766664685c79cf4fd19b35cf7f13281c8eace605891c2948a0a1a9ce
 DIST libcec-2.0.3.tar.gz 1077395 SHA256 b6df1f4fb6f922a9f21bcb2a34b1e1fd9359d04783a16af94f74ec469506cc0b SHA512 4520896e8fb630ef7a641fc45d24c22b6423995e6c4f856229103ee93c6f856e4a51693b22ab5c88e7d07d0401695dc02103f9810289ea4663b9c11d082d1ead WHIRLPOOL 9940f09808589a6fb49383394487a7bb2bd8ed4c7cf966bcdc7e555ded213d129bd487c3c4d473d6e035de451b8273f7a6e782284bc8ee10efd3f0a2a1560a22
 DIST libcec-2.0.4.tar.gz 1075334 SHA256 652f8bddf8629eb4d14c93bc97efbeb7406482f69626302c8489df8e1fd8431f SHA512 a48b7bcfd554b73e59ce7f88a2a788e19ada06aa8f84ea98b8fdb5076a679e83d33ab7cae5a4e06b3ce67fd10aa27572782a9e08eb1aa94765b23d5a521b546e WHIRLPOOL b652f86c68d0d807a7159c47e659577c8435e3b1ce6c8c486c5088cd92779a4b6a0c136f8aacd169dccf3d9968130b4ca033922e77a0a306aa2b2428041ded51
+DIST libcec-2.0.5.tar.gz 1077216 SHA256 ff876e793ad962d63d20e36f88a22965cb2f02ac793ac4297fcb76d8234b66cd SHA512 356f4eeceb0446e5222f744a8b09d082a7181f6f65a6b8b2cbf7c5b853448413def63ab3fc2eda84a9e25f5ffaf2eeaa886c01f4d345d7a783881e4c9baf84fb WHIRLPOOL 4d566097a37c2f8051b964662ec3da4e661c651b5359c7d0d03aa4533cb851fc222464367ec7946e0789e89ee0d278382b53fb01443cfc6749c66270e3f841ee
 DIST libcec-9999.tar.gz 1078206 SHA256 fbb0adbe9d22f505a568e76685b30c0f7639ba9332b8ee1a398e6c0cf6612e19 SHA512 df7683ebfe908b28c26ae186fbf513028bf3bf946a890daed0422ae8ee8b24eb93e8ea4fcae0ef22fc44c1ada59f41930fb0e2d59a2390ab713921c360111454 WHIRLPOOL b9b250ee86ee5c29639954e4ade595d302a816e15ac4cc932282489ac91c4109fa103e56a89546b68ecbf7a35ffa7310e2e2f4a41e5f666e8deebf3b9bd090bd
 EBUILD libcec-1.6.2.ebuild 756 SHA256 60cb572d1354191a1b551bf7f3c03dc51b0ad2da92b50d470b8035c449e372be SHA512 c84ae81dd8f788918d00aad7ded3b6605bc37a3b93a07072acb83697e104bb830a473e383465bfdb844e9f9a4f879f077dc8111fe352e24f66bc2a348f704ccd WHIRLPOOL 978004d78cd56cd7f981a63fb3f7a0b67663674506a62ba6548547c737713c3ef2b7884332c8126e9d35cfb829308efc59817c56c562f5715715a1e1d2a9c4bc
 EBUILD libcec-2.0.3.ebuild 781 SHA256 3d434cf7b4fb371a4e8246d0779fbdde625da5f090be1386c68b0edda7cd7a62 SHA512 129bf78c78f47ec8b2aa7d6694905ba8da661a694451e2aa3f555ba7486a7200a337eaa1affaa05e10f896c97db69e5abfa8d1171e193bcf282d847ad40299f9 WHIRLPOOL 17a3206ab8164f947d3b0a935de6108cce8b0970b371120eb4979a43e1cf456c3654a92da62792bce9de07e705f163ecbc6f7a3945d5b8b3d8fcb889ecc60d21
 EBUILD libcec-2.0.4.ebuild 781 SHA256 3d434cf7b4fb371a4e8246d0779fbdde625da5f090be1386c68b0edda7cd7a62 SHA512 129bf78c78f47ec8b2aa7d6694905ba8da661a694451e2aa3f555ba7486a7200a337eaa1affaa05e10f896c97db69e5abfa8d1171e193bcf282d847ad40299f9 WHIRLPOOL 17a3206ab8164f947d3b0a935de6108cce8b0970b371120eb4979a43e1cf456c3654a92da62792bce9de07e705f163ecbc6f7a3945d5b8b3d8fcb889ecc60d21
+EBUILD libcec-2.0.5.ebuild 788 SHA256 ebfe21ba0008854ff456f96c8e58979c9537661186fe44ecfe89396016e1d82f SHA512 fd441acd1ecba719a2f9a1c002df0109f041ef8a645168ffdc805b6448d790432376b4b68419dfab82ab2bd742332598d79c62f2002719b60cf3f34a6044e08a WHIRLPOOL f2e0e473048fc737041bd06a6d9cb7f1bca031d61e87d11d628916f86642da8cc2301edc5bff40e1deae02d9c83866379f023bd725f26bd3fa809a17ba8d0924
 EBUILD libcec-9999.ebuild 772 SHA256 94add9ad8d39f346bdefc797cd7060909cd31e5daae456e384c573f4785f2457 SHA512 bed36e032d48b3fe2ca8c82b6970947cd146a0aa833ef275f8714ad52d271b58d0701ff0f66be98f48ca0ecc0be3b31b52a9175f0c3bfe1214be9ff486c733fb WHIRLPOOL 12750bbda027d2e803072047d16a35856c08926b95be66eb9113d211181c8ae9dee515f8af9d6905a8cc46a546e613b786a5335db17e3652e6f84f49b172ba74
-MISC ChangeLog 3022 SHA256 4a1b19d9855fb166c6d980fa288afaaddc752cdd6be263055ce56e72109ecdd1 SHA512 a519cf2d583e00a4c0a2eaa834356fd519ba1fddd10f74eb4b3575ea7a672a9e315fcf24204a0e0009da9fbfdbde118dee66c71bf40533e035f2d7ca00809553 WHIRLPOOL a08c6d7de60c9a3c373f81ca32bb4be61996ab3e1ec2df266016f66c1e615af5549ded96e4faf49b5a9cb1c9aee4bd507c00108329e00564278619f5c33d57d6
+MISC ChangeLog 3153 SHA256 d9ec999c49427e207cd5f7ecd95dde0861e95b472a233e04d7ffeb4b48ba3716 SHA512 c949b338d2af1bcdc032ac158ef7f9191e8563edc021186600aad7d0c0f3711bda7f1a2017767663b7b41b35a7f478f155755379e02a82fb4b7d0b4e4cefbdb4 WHIRLPOOL f68921013bf3d3954ddf169c9fbf6efb7987c8652c66da7061e54db876b9bb777aa162212c1a0cdde93cb18d606aa0f7085589f615a74d5bdc9f3720c8c90c7f
 MISC metadata.xml 234 SHA256 0bb6d2fb9e5f78495185d9ade037e96d541b14993972a253392a74d0ae26b677 SHA512 11788f1aa339b4bd79f8ab1008e5a2b14fa5adb10554646b5a6fce6820ffd42a18265d4237276c2318ec6071f062ef8fc7651518dd157b1a62cbd89e39735440 WHIRLPOOL 1f7a86611793471a6f4c1d55d6916fc2a46c2b2ced6445b82fda21e23b94e8be358f61f7588e22d8b823e80c9e18102a23589f32320f69d8f894281d7705ae2d
