@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*libcec-2.0.5 (06 Dec 2012)
+
+  06 Dec 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
+  +libcec-2.0.5.ebuild:
+  Version bump.
+
 *libcec-2.0.4 (17 Nov 2012)
 
   17 Nov 2012; Daniel Rune Jensen (soehest) <daniel@eth0.dk>
